implementing-loading-lazy-from-team

--- a/_layout/Team/Research/Jubert_Pasco.html
+++ b/_layout/Team/Research/Jubert_Pasco.html
@@ -1,7 +1,7 @@
 
  <div class="item all research p-2" >
 <div class="card team-img" data-bs-toggle="modal" data-bs-target="#modal_jubert">    
-  <img class="card-img-top rounded-0 " src="assets/Team/Jubert_2x2.jpg" alt="Card image cap">
+  <img class="card-img-top rounded-0 " src="assets/Team/Jubert_2x2.jpg" alt="Card image cap" loading="lazy">
   <div class="card-overlay">
       <a class="icon" title="User Profile"><i class="fa-sharp fa-2x fa-solid fa-magnifying-glass" style="color: #a4893d;"></i></a>
   </div>
