--- a/_layout/Team/Research/Aisa_Custodio.html
+++ b/_layout/Team/Research/Aisa_Custodio.html
@@ -1,7 +1,7 @@
 <!-- Card Section -->
 <div class="item all research p-2">
   <div class="card team-img" data-bs-toggle="modal" data-bs-target="#modal_aisa">    
-    <img class="card-img-top rounded-0" src="assets/Team/Aisa_2x2.jpg" alt="Aisa Custodio">
+    <img class="card-img-top rounded-0" src="assets/Team/Aisa_2x2.jpg" alt="Aisa Custodio" loading="lazy">
     <div class="card-overlay">
         <a class="icon" title="User Profile"><i class="fa-sharp fa-2x fa-solid fa-magnifying-glass" style="color: #a4893d;"></i></a>
     </div>
