update-to margin and gallery

--- a/_layout/Team/Research/Aisa_Custodio.html
+++ b/_layout/Team/Research/Aisa_Custodio.html
@@ -1,5 +1,5 @@
 <!-- Card Section -->
-<div class="item all research p-2">
+<div class="item all research m-2">
   <div class="card team-img" data-bs-toggle="modal" data-bs-target="#modal_aisa">    
     <img class="card-img-top rounded-0" src="assets/Team/Aisa_2x2.jpg" alt="Aisa Custodio" loading="lazy">
     <div class="card-overlay">
