--- a/_layout/Team/gallery.html
+++ b/_layout/Team/gallery.html
@@ -91,7 +91,7 @@
               <img src="assets/Gallery/G13.JPG" alt="Lab Photoshoot session" >
           </div>
           <h5 class="mb-0 text-center"><b>Lab Photoshoot</b></h5>
-          <p class="text-center p-4"></p>
+          <p class="text-center p-4">A memorable photoshoot session with the lab team.</p>
       </div>
         </div>
     </div>
