--- a/_layout/Team/Executive/Clod_Aranas.html
+++ b/_layout/Team/Executive/Clod_Aranas.html
@@ -1,5 +1,5 @@
 <!-- Card Section -->
-<div class="item all executive p-2">
+<div class="item all executive m-2">
         <div class="card team-img" data-bs-toggle="modal" data-bs-target="#modal_1">    
             <img class="card-img-top rounded-0" src="assets/Team/Clod_2x2.jpg" alt="Card image cap" loading="lazy">
             <div class="card-overlay">
