--- a/_layout/TeamGallery.html
+++ b/_layout/TeamGallery.html
@@ -2,6 +2,6 @@
 
 
 <!-- Gallery Section -->
-<section id="gallery p-2">
+<!-- <section id="gallery">
     {{ insert Team/gallery.html}}
-  </section>
+  </section> -->
