--- a/_layout/Team/Research/Jubert_Pasco.html
+++ b/_layout/Team/Research/Jubert_Pasco.html
@@ -1,45 +1,39 @@
-<div class="item all research m-2" >
-<div class="card team-img" data-bs-toggle="modal" data-bs-target="#modal_jubert">    
-  <img class="card-img-top rounded-0 " src="assets/Team/Jubert_2x2.jpg" alt="Card image cap" loading="lazy">
-  <div class="card-overlay">
-      <a class="icon" title="User Profile"><i class="fa-sharp fa-2x fa-solid fa-magnifying-glass" style="color: #a4893d;"></i></a>
-  </div>
-  <div class="team-info border-0 rounded-0 text-center" style="background-color: #222222;">  
-      <a class="btn">Researcher<br> Dr. Jubert Pasco</a>
-  </div>
-</div>
+    <div class="col-md-4 col-sm-6">
+        <div class="item all research">
+            <div class="card team-img" data-bs-toggle="modal" data-bs-target="#modal_jubert">    
+                <img class="card-img-top rounded-0 " src="assets/Team/Jubert_2x2.jpg" alt="Card image cap" loading="lazy">
+                <div class="card-overlay">
+                        <a class="icon" title="User Profile"><i class="fa-sharp fa-2x fa-solid fa-magnifying-glass" style="color: #a4893d;"></i></a>
+                </div>
+                <div class="team-info border-0 rounded-0 text-center" style="background-color: #222222;">  
+                        <a class="btn">Researcher<br> Dr. Jubert Pasco</a>
+                </div>
+            </div>
 
-
-<!-- Modal Section -->
-<div class="modal fade" id="modal_jubert" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog modal-dialog-centered modal-sm">
-      <div class="modal-content">
-          <div class="modal-header">
-              <h6 class="text-light">Jubert Pasco </h6>
-              <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Close"></button>
-          </div>
-          <div class="modal-body text-center">
-              <img class="card-img-top rounded-0" src="assets/Team/Jubert_2x2.jpg" alt="Card image cap">
-              <div class="mb-2">
-                  <a href=""><i class="fa-brands fa-github fa-color mx-1"></i></a>
-                  <a href="https://www.linkedin.com/in/jubert-pasco-14659512a/" class="linkedin"><i class="fa-brands fa-linkedin fa-color mx-1"></i></a>
-                  <a href=""><i class="fa-brands fa-youtube fa-color mx-1"></i></a>
-                  <a href=""><i class="fa-brands fa-twitter fa-color mx-1"></i></a>
-              </div>
-              <p class="team-text small text-center">I am a PhD student specializing in 3D printing of cobalt and maraging steels. My research interests include phase transformations, superalloy design, texture control, high entropy alloys, and advanced manufacturing. I am passionate about interdisciplinary collaboration and innovation. Let's connect and discuss exciting research opportunities!</p>
-          </div>
-          <div class="modal-footer">
-              <button type="button" class="btn btn-dark btn-sm" data-bs-dismiss="modal">Close</button>
-          </div>
-      </div>
-  </div>
-</div>
-
-
-
-<!-- Modal Section -->
-
-
- </div>
-
- 
+            <!-- Modal Section -->
+            <div class="modal fade" id="modal_jubert" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                <div class="modal-dialog modal-dialog-centered modal-sm">
+                        <div class="modal-content">
+                                <div class="modal-header">
+                                        <h6 class="text-light">Jubert Pasco </h6>
+                                        <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Close"></button>
+                                </div>
+                                <div class="modal-body text-center">
+                                        <img class="card-img-top rounded-0" src="assets/Team/Jubert_2x2.jpg" alt="Card image cap">
+                                        <div class="mb-2">
+                                                <a href=""><i class="fa-brands fa-github fa-color mx-1"></i></a>
+                                                <a href="https://www.linkedin.com/in/jubert-pasco-14659512a/" class="linkedin"><i class="fa-brands fa-linkedin fa-color mx-1"></i></a>
+                                                <a href=""><i class="fa-brands fa-youtube fa-color mx-1"></i></a>
+                                                <a href=""><i class="fa-brands fa-twitter fa-color mx-1"></i></a>
+                                        </div>
+                                        <p class="team-text small text-center">I am a PhD student specializing in 3D printing of cobalt and maraging steels. My research interests include phase transformations, superalloy design, texture control, high entropy alloys, and advanced manufacturing. I am passionate about interdisciplinary collaboration and innovation. Let's connect and discuss exciting research opportunities!</p>
+                                </div>
+                                <div class="modal-footer">
+                                        <button type="button" class="btn btn-dark btn-sm" data-bs-dismiss="modal">Close</button>
+                                </div>
+                        </div>
+                </div>
+            </div>
+            <!-- Modal Section -->
+        </div>
+    </div>
