--- a/_layout/Team.html
+++ b/_layout/Team.html
@@ -15,35 +15,26 @@
 
   <div class="container">
     <div class="row">
-        <div class="col-lg-10 mx-auto text-center">
-
-            <ul class="filters text-dark  filter-button-group">
-              <li class="active" data-filter="*"><a href="#">All</a></li>
-              <li data-filter=".executive"><a href="#">EXECUTIVE</a></li>
-              <li data-filter=".research"><a href="#">RESEARCH</a></li>
-              <li data-filter=".undergrad"><a href="#">UNDERGRAD</a></li>
-              <li data-filter=".alumni"><a href="#">ALUMNI</a></li>
-            </ul>
-        </div>
-       
+      <div class="col-lg-10 mx-auto text-center">
+        <ul class="filters text-dark filter-button-group">
+          <li class="active" data-filter="*"><a href="#">All</a></li>
+          <li data-filter=".executive"><a href="#">EXECUTIVE</a></li>
+          <li data-filter=".research"><a href="#">RESEARCH</a></li>
+          <li data-filter=".undergrad"><a href="#">UNDERGRAD</a></li>
+          <li data-filter=".alumni"><a href="#">ALUMNI</a></li>
+        </ul>
+      </div>
         <div class="team" id="team-area">
             {{ insert Team/Executive/Clod_Aranas.html }}
             {{ insert Team/Research/Jubert_Pasco.html }}
             {{ insert Team/Research/Aisa_Custodio.html }}
-
-
-            <!-- {{ insert Team/Research/Kuda_Nyamuchiwa.html }}
-            {{ insert Team/Research/Gyanaranjan_Mishra.html }}  -->
-
-
-
-          <!-- RESEARCH -->
-
+            {{ insert Team/Research/Kuda_Nyamuchiwa.html}}
 
 
       </div>
-  </div>
+    </div>
 </div>
+  </div>
 </section>
  
 
