--- a/_layout/Team/Research/Kuda_Nyamuchiwa.html
+++ b/_layout/Team/Research/Kuda_Nyamuchiwa.html
@@ -1,45 +1,36 @@
-<!-- Card Section -->
-<div class="col-sm-6 col-md-3 item all  research">
-  <div class="single-team rounded">
-      <div class="team-img">
-          <img src="assets/Team/Kuda_2x2.jpg" class="image img-fluid">
-          <div class="card-overlay" data-bs-toggle="modal" data-bs-target="#modal_kuda">
-              <a class="icon" title="User Profile">
-              <i class="fa-sharp fa-2x fa-solid fa-magnifying-glass" style="color: #a4893d;"></i>
-            </a>
-          </div>
+<div class="col-md-4 col-sm-6">
+  <div class="item all research">
+    <div class="card team-img" data-bs-toggle="modal" data-bs-target="#modal_kuda">
+      <img class="card-img-top rounded-0" src="assets/Team/Kuda_2x2.jpg" alt="Card image cap" loading="lazy">
+      <div class="card-overlay">
+        <a class="icon" title="User Profile"><i class="fa-sharp fa-2x fa-solid fa-magnifying-glass" style="color: #a4893d;"></i></a>
       </div>
-          <div class="team-info" data-bs-toggle="modal" data-bs-target="#modal_kuda">
-              <a class="btn btn-default">
-                  Kudakwashe Nyamuchiwa<div>PhD Student</div>
-              </a>
-           </div>
-  </div>
-  
-<!-- Modal section -->
-<div class="modal fade" id="modal_kuda" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog modal-dialoged-centered" >
-    <div class="modal-content">
-      <div class="modal-header">
-        <h1 class="modal-title" id="exampleModalLabel">Kudakwashe Nyamuchiwa (PhD Student)</h1>
-        <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Close"></button>
-      </div>
-      <div class="modal-body">
-        <div class="row">
-          <div class="col m-2">
-            <span>
-             <a href="https://www.linkedin.com/in/kudakwashe-nyamuchiwa-660b68149/" class="linkedin"><i class="fa-brands fa-linkedin fa-color"></i></a>
-            </span>
-
-          </div>
-          </div>
-        <img src="assets/Team/Kuda_2x2.jpg" alt="" class= "rounded mx-auto d-block">
-        <p class="m-2 team-text">"I am a Ph.D candidate in the ADMTRL-lab, with a bachelor's degree in metallurgical engineering from the University of Zimbabwe. My passion for materials science led me to pursue a master's degree at the Egypt-Japan University of Science and Technology, where I specialized in smart titanium-based alloys for biomedical applications. Currently, I am focused on the hybrid manufacturing of the newly developed alloy, M789, tailored for laser powder bed fusion. I'm enthusiastic about advancing its potential applications across industries through my research. Throughout my academic and research endeavors, I have developed expertise in alloy design and material characterization. Apart from research work I enjoy the outdoors, skiing, and guitar playing "</p>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-dark" data-bs-dismiss="modal">Close</button>
-        <!-- <button type="button" class="btn btn-primary">Save changes</button> -->
+      <div class="team-info border-0 rounded-0 text-center" style="background-color: #222222;">
+        <a class="btn">PhD Student<br> Kudakwashe Nyamuchiwa</a>
       </div>
     </div>
+
+    <!-- Modal Section -->
+    <div class="modal fade" id="modal_kuda" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog modal-dialog-centered modal-sm">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h6 class="text-light">Kudakwashe Nyamuchiwa (PhD Student)</h6>
+            <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body text-center">
+            <img class="card-img-top rounded-0" src="assets/Team/Kuda_2x2.jpg" alt="Card image cap">
+            <div class="mb-2">
+              <a href="https://www.linkedin.com/in/kudakwashe-nyamuchiwa-660b68149/" class="linkedin"><i class="fa-brands fa-linkedin fa-color mx-1"></i></a>
+            </div>
+            <p class="team-text small text-center">"I am a Ph.D candidate in the ADMTRL-lab, with a bachelor's degree in metallurgical engineering from the University of Zimbabwe. My passion for materials science led me to pursue a master's degree at the Egypt-Japan University of Science and Technology, where I specialized in smart titanium-based alloys for biomedical applications. Currently, I am focused on the hybrid manufacturing of the newly developed alloy, M789, tailored for laser powder bed fusion. I'm enthusiastic about advancing its potential applications across industries through my research. Throughout my academic and research endeavors, I have developed expertise in alloy design and material characterization. Apart from research work I enjoy the outdoors, skiing, and guitar playing."</p>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-dark btn-sm" data-bs-dismiss="modal">Close</button>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- Modal Section -->
   </div>
 </div>
