--- a/_layout/projects.html
+++ b/_layout/projects.html
@@ -2,12 +2,12 @@
 <section id="projects">
   <div class="container">
     <div class="row">
-    <div class="col-12 section-intro text-center p-2">
+    <div class=" section-intro text-center">
       <h1 class="display-4">Projects</h1>
     </div>
     </div>
     <div class="row gy-5">
-    <div class="col-lg-4 col-md-6">
+    <div class="col-lg-4 col-md-6 col-sm-12">
         <div class="projects-box h-100 rounded">
           <div class="projects-icon  mb-3">
             <img src="assets/Project_section.images/Icon-1.png"  alt="...">
@@ -21,7 +21,7 @@
       <div class="col-lg-4 col-md-6">
         <div class="projects-box h-100 rounded">
           <div class="projects-icon mb-3">
-            <img src="assets/Project_section.images/Icon-2.png"alt="...">
+            <img src="assets/Project_section.images/Icon-2.png" alt="Icon representing next-generation electrical steels">
           </div>
           <div class="projects-content h-100">
             <h6 class="mb-3">Next-generation electrical steels for automotive and aerospace industries</h6>
@@ -32,7 +32,7 @@
       <div class="col-lg-4 col-md-6">
         <div class="projects-box h-100 rounded">
           <div class="projects-icon mb-3">
-            <img src="assets/Project_section.images/Icon-3.png"alt="...">
+            <img src="assets/Project_section.images/Icon-3.png" alt="Icon representing advanced high-strength steels">
           </div>
           <div class="projects-content">
             <h6 class="mb-3">Advanced high-strength steels to reduce carbon emission</h6>
@@ -43,7 +43,7 @@
       <div class="col-lg-4 col-md-6">
         <div class="projects-box h-100 rounded">
           <div class="projects-icon mb-3">
-            <img src="assets/Project_section.images/Icon-4.png"alt="...">
+            <img src="assets/Project_section.images/Icon-4.png" alt="Icon representing commercialization of high-entropy alloys">
           </div>
           <div class="projects-content">
             <h6 class="mb-3" style="word-wrap: break-word;">Commercialization of high-entropy alloys</h6>
@@ -54,7 +54,7 @@
       <div class="col-lg-4 col-md-6">
         <div class="projects-box h-100 rounded">
           <div class="projects-icon mb-3">
-            <img src="assets/Project_section.images/Icon-5.png"alt="...">
+            <img src="assets/Project_section.images/Icon-5.png" alt="Icon representing new commercial alloys for additive manufacturing">
           </div>
           <div class="projects-content">
             <h6 class="mb-3">New commercial alloys specifically designed for additive manufacturing technology</h6>
@@ -65,7 +65,7 @@
       <div class="col-lg-4 col-md-6">
         <div class="projects-box h-100 rounded">
           <div class="projects-icon mb-3">
-            <img src="assets/Project_section.images/Icon-6.png"alt="...">
+            <img src="assets/Project_section.images/Icon-6.png" alt="Icon representing collaboration opportunities">
           </div>
           <div class="projects-content">
             <h6 class="mb-3">New commercial alloys specifically designed for additive manufacturing technology</h6>
@@ -90,3 +90,60 @@
   </div>
 
   </section>
+
+  <div class="container">
+  <div class="projects-box h-100 rounded">
+    <div class="projects-icon mb-3">
+      <img src="assets/Project_section.images/Icon-2.png" alt="Icon representing next-generation electrical steels">
+    </div>
+    <div class="projects-content h-100">
+      <h6 class="mb-3">Next-generation electrical steels for automotive and aerospace industries</h6>
+      <p>The current electrification of the transportation industry will need efficient electrical steel for induction motors to maximize the mileage and reduce power consumption. We are working with Natural Resources Canada and their industry partners to design the alloy and process to maximize the magnetic permeability and minimize core losses.</p>
+    </div>
+  </div>
+</div>
+<div class="col-lg-4 col-md-6">
+  <div class="projects-box h-100 rounded">
+    <div class="projects-icon mb-3">
+      <img src="assets/Project_section.images/Icon-3.png" alt="Icon representing advanced high-strength steels">
+    </div>
+    <div class="projects-content">
+      <h6 class="mb-3">Advanced high-strength steels to reduce carbon emission</h6>
+      <p>Reducing the weight of body-in-white assemblies can reduce the energy consumption of both gas- and electric-powered automotive vehicles. Thus, our team works on the development of medium-Mn steels, which can replace the heavier conventional steels without compromising the safety of passengers.</p>
+    </div>
+  </div>
+</div>
+<div class="col-lg-4 col-md-6">
+  <div class="projects-box h-100 rounded">
+    <div class="projects-icon mb-3">
+      <img src="assets/Project_section.images/Icon-4.png" alt="Icon representing commercialization of high-entropy alloys">
+    </div>
+    <div class="projects-content">
+      <h6 class="mb-3" style="word-wrap: break-word;">Commercialization of high-entropy alloys</h6>
+      <p>By controlling the dual-phase nature of HEAs, we can tailor the mechanical properties of the alloy-based or target applications. Our team can design and manufacture HEAs that can withstand an extreme environment.</p>
+    </div>
+  </div>
+</div>
+<div class="col-lg-4 col-md-6">
+  <div class="projects-box h-100 rounded">
+    <div class="projects-icon mb-3">
+      <img src="assets/Project_section.images/Icon-5.png" alt="Icon representing new commercial alloys for additive manufacturing">
+    </div>
+    <div class="projects-content">
+      <h6 class="mb-3">New commercial alloys specifically designed for additive manufacturing technology</h6>
+      <p>Our team is committed to providing testing and consultancy services to private industries. We are known to have short lead times to deliver your needs. Check the 'Facilities' tab for the list of our infrastructure.</p>
+    </div>
+  </div>
+</div>
+<div class="col-lg-4 col-md-6">
+  <div class="projects-box h-100 rounded">
+    <div class="projects-icon mb-3">
+      <img src="assets/Project_section.images/Icon-6.png" alt="Icon representing collaboration opportunities">
+    </div>
+    <div class="projects-content">
+      <h6 class="mb-3">New commercial alloys specifically designed for additive manufacturing technology</h6>
+      <p>Connect with us if you think our team can help you out! We are collaborating with numerous researchers around the world. Please check our publication history for details.</p>
+    </div>
+  </div>
+</div>
+</section>
